Create contact page

--- a/index/TMY-page.html
+++ b/index/TMY-page.html
@@ -14,10 +14,7 @@
             <a href="">HOME</a>
           </li>
           <li class="about-page">
-            <a id="header__nav--active"   href="">ABOUT</a>
-          </li>
-          <li class="data-set-page">
-            <a href="">DATASET</a>
+            <a id="header__nav--active"   href="">ABOUT THE DATA</a>
           </li>
           <li class="resource-page">
             <a href="">RESOURCES</a>
