Add transition for access data articles

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
       <section class="main__collage">
         <img class="main__collage__image main-image1" src="./images/nasa-orb.jpg" alt="">
         <img class="main__collage__image main-image2" src="./images/solar-panel.jpeg" alt="">
-        <img class="main__collage__image main-image3" src="./images/wind-energy.jpeg" alt="">
-        <img class="main__collage__image main-image4" src="./images/nyc-night.jpg" alt="">
+        <img class="main__collage__image main-image3" src="./images/nyc-night.jpg" alt="">
+        <img class="main__collage__image main-image4" src="./images/wind-energy.jpeg" alt="">
+        <img class="main__collage__image main-image5" src="./images/luca-bravo.jpg" alt="">
+        <img class="main__collage__image main-image6" src="./images/karsten-wurth.jpg" alt="">
       </section>
       <section class="main__what-is" id="whatis">
         <h3>WHAT IS THE NSRDB?</h3>
@@ -54,35 +56,32 @@
           <p>
             NSRDB Data is publicly available at no cost. The data can be accessed via the NSRDB Viewer, an API, or through Globus.
           </p>
-        </div>
+        
         <div class="ways-to-access-data">
-          <article class="data-content-container">
+          <article class="nsrdb-viewer">
             <div class="nsrdb-viewer--header data-show">
               <h1>NSRDB VIEWER</h1>
-              <p></p>
             </div>
-            <div class="data-hide">
+            <div class="nsrdb-viewer--info data-hide">
               <h4>NSRDB Viewer</h4>
               <p>The NSRDB Viewer is the easiest way to download NSRDB  data. It is a geospatial web application that allows for   the visualization and download of NSRDB data. </p>
               <button>Go to Viewer</button>
             </div>
           </article>
-          <article class="data-content-container">
+          <article class="nsrdb-api">
             <div class="nsrdb-api--header data-show">
               <h1>NSRDB API</h1>
-              <p></p>
             </div>
-            <div class="data-hide">
+            <div class="nsrdb-api--info data-hide">
               <h4>NSRDB API</h4>
               <p>NSRDB data is also available through an API. Go to <a  href="https://developer.nrel.gov/" target="_blank">  developer.nrel.gov</a> to sign up for an API key and  request data from the API.</p>
             </div>
           </article>
-          <article class="data-content-container">
+          <article class="globus-data">
             <div class="globus-data--header data-show">
             <h1>Globus Data Download</h1>
-            <p></p>
             </div>
-            <div class="data-hide">
+            <div class="globus-data--info data-hide">
               <h4>Globus Data Download</h4>
               <p>To download a very large amount of data, it is   necessary to use Globus. See instructions for using   Globus to download NSRDB data here (**********link to   Globus Page, remove all text before the big header  “Globus Data Download Instructions”)</p>
             </div>
@@ -96,6 +95,7 @@
             <li>Solar Integration National Dataset (SIND) Toolkit (link)</li>
           </ul>
         </p>
+        </div>
       </section>
       <section class="main__contributors" id="contributors">
         <h3>SUPPORTERS AND CONTRIBUTORS</h3>
