Add styling for access data section

--- a/index.html
+++ b/index.html
@@ -83,18 +83,20 @@
             </div>
             <div class="globus-data--info data-hide">
               <h4>Globus Data Download</h4>
-              <p>To download a very large amount of data, it is   necessary to use Globus. See instructions for using   Globus to download NSRDB data here (**********link to   Globus Page, remove all text before the big header  “Globus Data Download Instructions”)</p>
+              <p>To download a very large amount of data, it is   necessary to use Globus. See instructions for using   Globus to download NSRDB data <a href="">here.</a></p>
             </div>
           </article>
         </div>
-        <p>
-          NSRDB data are compatible with many system performance and economic models, including the following products created by NREL:
+        <div class="compatability">
+          <p>
+            NSRDB data are compatible with many system performance and economic models, including the following products created by NREL:
+          </p>
           <ul>
-            <li>System Advisor Model (SAM) (link)</li>
-            <li>PVWatts (link)</li>
-            <li>Solar Integration National Dataset (SIND) Toolkit (link)</li>
+            <li> <a href="https://sam.nrel.gov/" target="_blank">System Advisor Model (SAM)</a></li>
+            <li><a href="http://pvwatts.nrel.gov/" target="_blank">PVWatts</a></li>
+            <li><a href="http://www.nrel.gov/electricity/transmission/sind_toolkit.html" target="_blank">Solar Integration National Dataset (SIND) Toolkit </a></li>
           </ul>
-        </p>
+        </div>
         </div>
       </section>
       <section class="main__contributors" id="contributors">
