Fix style and adjust buttons

--- a/index/US-data.html
+++ b/index/US-data.html
@@ -11,7 +11,7 @@
     <nav class="nav">
         <ul>
           <li class="home-page">
-            <a href="">HOME</a>
+            <a  href="">HOME</a>
           </li>
           <li class="about-page">
             <a id="header__nav--active"   href="">ABOUT THE DATA</a>
@@ -41,17 +41,17 @@
       </section>
       <ul class="main__links about-page__main-links">
         <li>
-          <a href="#available-versions">AVAILABLE VERSIONS</a>
+          <a class="links__page" href="#available-versions">AVAILABLE VERSIONS</a>
         </li>
         <li>
-          <a href="#psm">ABOUT PSM</a>
+          <a class="links__page" href="#psm">ABOUT PSM</a>
 
         </li>
         <li>
-          <a href="#data-availability">DATA AVAILABILITY</a>
+          <a class="links__page" href="#data-availability">DATA AVAILABILITY</a>
         </li>
         <li>
-          <a href="#notes">NOTES</a>
+          <a class="links__page" href="#notes">NOTES</a>
         </li> 
       </ul>
       <section class="available-versions__section" id="available-versions">
