--- a/index/international-data.html
+++ b/index/international-data.html
@@ -41,18 +41,18 @@
       </section>
       <ul class="main__links about-page__main-links">
         <li>
-          <a href="#available-data">AVAILABLE DATA</a>
+          <a class="links__page" href="#available-data">AVAILABLE DATA</a>
         </li>
         <li>
-          <a href="#international-availabilty">
+          <a class="links__page" href="#international-availabilty">
           INTERNATIONAL AVAILABILITY</a>
 
         </li>
         <li>
-          <a href="#SUNY-model">SUNY MODEL</a>
+          <a class="links__page" href="#SUNY-model">SUNY MODEL</a>
         </li>
         <li>
-          <a href="#ref">REFERENCES</a>
+          <a class="links__page" href="#ref">REFERENCES</a>
         </li> 
       </ul>
       <section class="available-data__section" id="available-data">
