Add styling for resources page

--- a/index/globus-data.html
+++ b/index/globus-data.html
@@ -40,28 +40,28 @@
       </p>
       <ul class="main__links">
         <li>
-          <a href="#step-one">STEP 1</a>
+          <a class="main__links__sections" href="#step-one">STEP 1</a>
         </li>
         <li>
-          <a href="#step-two">STEP 2</a>
+          <a class="main__links__sections" href="#step-two">STEP 2</a>
         </li>
         <li>
-          <a href="#step-three">STEP 3</a>
+          <a class="main__links__sections" href="#step-three">STEP 3</a>
         </li>
         <li>
-          <a href="#step-four">STEP 4</a>
+          <a class="main__links__sections" href="#step-four">STEP 4</a>
         </li> 
         <li>
-          <a href="#step-five">STEP 5</a>
+          <a class="main__links__sections" href="#step-five">STEP 5</a>
         </li> 
         <li>
-          <a href="#step-six">STEP 6</a>
+          <a class="main__links__sections" href="#step-six">STEP 6</a>
         </li> 
         <li>
-          <a href="#step-seven">STEP 7</a>
+          <a class="main__links__sections" href="#step-seven">STEP 7</a>
         </li> 
         <li>
-          <a href="#step-eight">STEP 8</a>
+          <a class="main__links__sections" href="#step-eight">STEP 8</a>
         </li> 
       </ul>
     </section>
@@ -130,5 +130,8 @@
       <li><a  class="disclaimer__links" href="http://www.nrel.gov/"> NREL Home</a></li>
     </ul>
   </footer>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="downloads/jquery-3.2.1.min.js"><\/script>')</script>
+  <script src="../script.js"></script>
 </body>
 </html>
