Create mobile style for contact page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>NSRDB</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="normalize/normalize.css">
     <link rel="stylesheet" href="styles/home-main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
