--- a/index/TMY-page.html
+++ b/index/TMY-page.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TMY</title>
   <link rel="stylesheet" href="../styles/TMY-page.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
