Add mobile layout to international-page

--- a/index/international-data.html
+++ b/index/international-data.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>International Data</title>
   <link rel="stylesheet" href="../styles/international-data.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -104,7 +105,7 @@
             <p>India, Bangladesh, Bhutan, Nepal, Sri Lanka, and parts of Pakistan and Afghanistan</p>
           </div>
         </article>
-        <article class="content-container">
+        <article class="content-container psm-list">
           <div class="international-list--header show">
           <h1>PHYSICAL SOLAR MODEL</h1>
           <p>Data Available International</p>
