--- a/index/contact.html
+++ b/index/contact.html
@@ -15,13 +15,13 @@
             <a href="">HOME</a>
           </li>
           <li class="about-page">
-            <a id="header__nav--active"   href="">ABOUT THE DATA</a>
+            <a href="">ABOUT THE DATA</a>
           </li>
           <li class="resource-page">
             <a href="">RESOURCES</a>
           </li>
           <li class="contact-page">
-            <a href="">CONTACT</a>
+            <a id="header__nav--active"   href="">CONTACT</a>
           </li>
         </ul>
         <div class="search-contanier">
