Intial build of nav

--- a/index/contact.html
+++ b/index/contact.html
@@ -10,12 +10,26 @@
   </head>
   <body>
     <nav class="nav">
-        <ul>
+        <ul class="navigation">
           <li class="home-page">
             <a href="">HOME</a>
           </li>
           <li class="about-page">
             <a href="">ABOUT THE DATA</a>
+            <ul class="sub-nav">
+              <li>
+                <a href="">WHAT IS NSRDB?</a>
+              </li>
+              <li>
+                <a href="">U.S DATA</a>
+              </li>
+              <li>
+                <a href="">INTERNATIONAL DATA</a>
+              </li>
+              <li>
+                <a href="">TYPICAL METEOROLOGICAL YEAR</a>
+              </li>
+            </ul>
           </li>
           <li class="resource-page">
             <a href="">RESOURCES</a>
