--- a/index/contact.html
+++ b/index/contact.html
@@ -14,6 +14,9 @@
           <li class="home-page">
             <a href="">HOME</a>
           </li>
+          <li class="access-data">
+            <a href="">ACCESS THE DATA</a>
+          </li>
           <li class="about-page">
             <a href="">ABOUT THE DATA</a>
             <ul class="sub-nav">
@@ -39,10 +42,11 @@
           </li>
         </ul>
         <div class="search-contanier">
-          <!-- <input id="search-bar" type="search" placeholder="Search...">
-          <label for="search-bar"> -->
-            <span><img  id="search__magnifying-img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" /></span>
-          </label>
+          <span class="search-icon-btn"><img  id="search__magnifying-img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" />
+          </span>
+        </div>
+        <div class="search-input">
+          <input id="search-bar" type="search" placeholder="Search...">
         </div>
       </nav>
     <header class="header"> 
