--- a/index/international-data.html
+++ b/index/international-data.html
@@ -60,63 +60,62 @@
         <div class="drop-shadow-text-box">
           <h3> AVAILABLE DATA</h3>
           <p>The data available in the NSRDB for various international countries was developed using one of two different models: the Physical Solar Model (PSM) that is used for the latest version of the U.S. NSRDB data, and the SUNY Semi-Empirical model, which is described in detail below. A summary of these international data sets is provided in the table below.</p>
+          <table>
+            <caption>Summary of these international data sets</caption>
+            <thead>
+              <tr>
+                <th>Region</th>
+                <th>Data Set Name/Model Used</th>
+                <th>Temporal Resolution</th>
+                <th>Spatial Resolution</th>
+                <th>Years Covered</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>South Asia</td>
+                <td>SUNY</td>
+                <td>1 hour</td>
+                <td>10 x 10 km</td>
+                <td>2000-2014</td>
+              </tr>
+              <tr>
+                <td>Mexico/Central America</td>
+                <td>PSM</td>
+                <td>1/2 hour</td>
+                <td>4 x 4 km</td>
+                <td>1998-2014</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-      </section>
-      <section class="international-data__section">
-        <table>
-          <caption>Summary of these international data sets</caption>
-          <thead>
-            <tr>
-              <th>Region</th>
-              <th>Data Set Name/Model Used</th>
-              <th>Temporal Resolution</th>
-              <th>Spatial Resolution</th>
-              <th>Years Covered</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>South Asia</td>
-              <td>SUNY</td>
-              <td>1 hour</td>
-              <td>10 x 10 km</td>
-              <td>2000-2014</td>
-            </tr>
-            <tr>
-              <td>Mexico/Central America</td>
-              <td>PSM</td>
-              <td>1/2 hour</td>
-              <td>4 x 4 km</td>
-              <td>1998-2014</td>
-            </tr>
-          </tbody>
-        </table>
       </section>
       <section class="international-list" id="international-availabilty">
         <h3 class="international-list__h3"> AVAILABLE DATA IN INTERNATIONAL COUNTRIES</h3>
-        <article class="content-container">
-          <div class="international-list--header show">
+        <article class="content-container SUNY-list ">
+          <div class="international-list--header data-show">
             <h1>SUNY SEMI-EMPIRICAL MODEL</h1>
             <p>Data Available International</p>
           </div>
           
-          <div class="hide">
+          <div class="data-hide">
             <h4>SUNY</h3>
             <p>India, Bangladesh, Bhutan, Nepal, Sri Lanka, and parts of Pakistan and Afghanistan</p>
           </div>
         </article>
         <article class="content-container psm-list">
-          <div class="international-list--header show">
+          <div class="international-list--header data-show">
           <h1>PHYSICAL SOLAR MODEL</h1>
           <p>Data Available International</p>
           </div>
-          <div class="hide">
+          <div class="data-hide">
             <h4>PSM</h3>
             <p>Anguilla, Antigua and Barbuda, Aruba, Bahamas, Barbados, Belize, Bermuda, Bolivia, Brazil, British Virgin Islands, Canada, Cape Verde, Cayman Island, Chile, Colombia, Costa Rica, Cuba, Curaçao, Dominica, Dominican Republic, Ecuador, El Salvador, Grenada, Guatemala, Guyana, Haiti, Honduras, Jamaica, Kiribati, Mexico, Montserrat, Nicaragua, Panama, Paraguay, Peru, Puerto Rico, Saint Barthélemy, Saint Lucia, Sint Maarten, St Vincent and the Grenadines, St-Martin, St. Kitts and Nevis, St. Pierre and Miquelon, Suriname, Trinidad and Tobago, Turks and Caicos Islands, U.S. Minor Outlying Islands, U.S. Virgin Islands, and Venezuela</p>
           </div>
         </article>
       </section>
       <section class="SUNY-data__section" id="SUNY-model">
+        <div class="drop-shadow-text-box">
         <h3>About the SUNY Semi-Empirical Model</h3>
         <p>The NSRDB SUNY Semi-Empirical Model data was developed using the semi-empirical satellite model developed by Perez et al. [1, 2, 3] as part of the India-U.S. Energy Dialogue. These data were developed in collaboration with the State University of New York at Albany (SUNY Albany) and Solar Consulting Services.
 
@@ -132,6 +131,7 @@
 
         •Monthly aerosol optical depth (AOD): The current simulation uses month-specific AOD prepared by Solar Consulting Services [5] and derived from an ensemble of sources including satellite remote sensing, transport models, and ground measurements.
         </p>
+        </div>
       </section>
       <section class="ref" id="ref">
         <ul>
