Add search bar to all pages

--- a/index/TMY-page.html
+++ b/index/TMY-page.html
@@ -25,10 +25,11 @@
           </li>
         </ul>
         <div class="search-contanier">
-          <!-- <input id="search-bar" type="search" placeholder="Search...">
-          <label for="search-bar"> -->
-            <span><img  id="search__magnifying-img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" /></span>
-          </label>
+          <span class="search-icon-btn"><img  id="search__magnifying-img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" />
+          </span>
+        </div>
+        <div class="search-input">
+          <input id="search-bar" type="search" placeholder="Search...">
         </div>
       </nav>
     <header class="header"> 
