--- a/index/US-data.html
+++ b/index/US-data.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>US Data</title>
   <link rel="stylesheet" href="../styles/US-data.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -24,10 +25,11 @@
           </li>
         </ul>
         <div class="search-contanier">
-          <!-- <input id="search-bar" type="search" placeholder="Search...">
-          <label for="search-bar"> -->
-            <span><img  id="search__magnifying-img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" /></span>
-          </label>
+          <span class="search-icon-btn"><img  id="search__magnifying-img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" />
+          </span>
+        </div>
+        <div class="search-input">
+          <input id="search-bar" type="search" placeholder="Search...">
         </div>
       </nav>
     <header class="header"> 
