Add the access the data to nav

--- a/index/resources.html
+++ b/index/resources.html
@@ -9,23 +9,29 @@
 </head>
 <body>
   <nav class="nav">
-    <ul>
+    <ul class="navigation">
       <li class="home-page">
         <a href="">HOME</a>
       </li>
+      <li class="access-data">
+        <a href="">ACCESS THE DATA</a>
+      </li>
       <li class="about-page">
         <a href="">ABOUT THE DATA</a>
-      </li>
       <li class="resource-page">
-        <a id="header__nav--active" href="">RESOURCES</a>
+          <a id="header__nav--active" href="">RESOURCES</a>
       </li>
       <li class="contact-page">
-        <a href="">CONTACT</a>
-      </li>
+        <a    href="">CONTACT</a>
+        </li>
     </ul>
     <div class="search-contanier">
-      <span><img  id="search__magnifying- src="../images/icmagnifying-glass.svg" alt="magnifyglass image" /></span>
-      </label>
+      <span class="search-icon-btn">
+        <img  id="search__magnifying-img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" />
+      </span>
+    </div>
+    <div class="search-input">
+      <input id="search-bar" type="search" placeholder="Search...">
     </div>
   </nav>
   <header class="header"> 
