Fix magnifying glass image

--- a/index/globus-data.html
+++ b/index/globus-data.html
@@ -24,7 +24,7 @@
       </li>
     </ul>
     <div class="search-contanier">
-      <span><img  id="search__magnifying- src="../images/icmagnifying-glass.svg" alt="magnifyglass image" /></span>
+      <span><img  id="search__magnifying--img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" /></span>
       </label>
     </div>
   </nav>
