--- a/index/US-data.html
+++ b/index/US-data.html
@@ -12,19 +12,19 @@
     <nav class="nav">
        <ul>
          <li class="home-page">
-           <a href="">HOME</a>
+           <a href="https://nsrdb.nrel.gov/">HOME</a>
          </li>
          <li class="access-data">
-          <a href="">ACCESS THE DATA</a>
+          <a href="https://nsrdb.nrel.gov/#access-data">ACCESS THE DATA</a>
         </li>
          <li class="about-page">
-           <a id="header__nav--active"   href="">ABOUT THE DATA</a>
+           <a id="header__nav--active"   href="header__nav--active" href="https://nsrdb.nrel.gov/#whatis">ABOUT THE DATA</a>
          </li>
          <li class="resource-page">
-           <a href="">RESOURCES</a>
+           <a href="https://nsrdb.nrel.gov/resources">RESOURCES</a>
         </li>
          <li class="contact-page">
-           <a href="">CONTACT</a>
+           <a href="https://nsrdb.nrel.gov/contact">CONTACT</a>
          </li>
        </ul>
       <div class="search-contanier">
