Fix footer spacing and text spacing on home

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header role="banner" class="header">
       <h2>NATIONAL SOLAR RADIATION DATABASE</h2>
       <ul class="header__nav">
-        <li><a class="header__nav__link" href="https://nsrdb.nrel.gov/about">Home</a></li>
-        <li><a class="header__nav__link" href="https://nsrdb.nrel.gov/data-sets">About the Data</a></li>
+        <li><a class="header__nav__link" href="https://nsrdb.nrel.gov/">Home</a></li>
+        <li><a class="header__nav__link" href="https://nsrdb.nrel.gov/#whatis">About the Data</a></li>
         <li><a class="header__nav__link" href="https://nsrdb.nrel.gov/resources">Resources</a></li>
         <li><a class="header__nav__link" href="https://nsrdb.nrel.gov/contact">Contact</a></li>
       </ul>
@@ -37,7 +37,7 @@
         <img class="main__collage__image main-image2" src="./images/solar-panel.jpeg" alt="">
         <img class="main__collage__image main-image3" src="./images/nyc-night.jpg" alt="">
         <img class="main__collage__image main-image4" src="./images/wind-energy.jpeg" alt="">
-        <img class="main__collage__image main-image5" src="./images/andreas-gucklhorn.jpg" alt="">
+        <img class="main__collage__image main-image5" src="./images/andreas-gucklhorn-cut.jpg" alt="">
         <img class="main__collage__image main-image6" src="./images/american-public-power-association-cut.jpeg" alt="">
       </section>
       <section class="main__what-is" id="whatis">
@@ -139,6 +139,7 @@
         <li><a  class="disclaimer__links" href="http://www.nrel.gov/disclaimer.html"> Disclaimer |</a></li>
         <li><a  class="disclaimer__links" href="http://www.nrel.gov/"> NREL Home</a></li>
       </ul>
+      <p class="disclaimer__github-link"><a href="https://github.com/18F/product-guide/edit/18f-pages/pages/product-management-at-18f.md">Edit this page</a> or <a href="https://github.com/18F/product-guide/issues">file an issue</a> on GitHub</p>
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="downloads/jquery-3.2.1.min.js"><\/script>')</script>
