--- a/index/resources.html
+++ b/index/resources.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resources</title>
   <link rel="stylesheet" href="../styles/resources.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
