Addjust main-page links on globas and resources page

--- a/index/resources.html
+++ b/index/resources.html
@@ -45,21 +45,21 @@
       <p>The following resources provide additional information about the NSRDB.
       </p>
       <ul class="main__links">
-        <li>
-          <a class="main__links__sections" href="#user-manuals">USER MANUALS</a>
+        <li class="main-links__li">
+          <a class="main__links__a" href="#user-manuals">USER MANUALS</a>
         </li>
-        <li>
-          <a class="main__links__sections" href="#links">LINKS</a>
+        <li class="main-links__li">
+          <a class="main__links__a" href="#links">LINKS</a>
         </li>
-        <li>
-          <a class="main__links__sections" href="#publications">PUBLICATIONS</a>
+        <li class="main-links__li">
+          <a class="main__links__a" href="#publications">PUBLICATIONS</a>
         </li>
       </ul>
     </section>
     <section id="user-manuals">
       <div class="drop-shadow-text-box">
         <h3>USER MANUALS</h3>
-        <p>Reference the documentation below for more information about each version of the NSRDB.</p>
+        <p class="user-manuals__p">Reference the documentation below for more information about each version of the NSRDB.</p>
         <h4>Physical Solar Model (PSM)</h4>
         <p>A user manual for the Physical Solar Model will be available soon. Until it is available, please reference the documentation below.</p>
         <ol>
@@ -73,9 +73,9 @@
           <a href="http://journals.ametsoc.org/doi/abs/10.1175/1520-0450%281992%29031%3C0194%3AMSSIFS%3E2.0.CO%3B2" target="_blank">http://journals.ametsoc.org/doi/abs/10.1175/1520-0450%281992%29031%3C0194%3AMSSIFS%3E2.0.CO%3B2.</a></li>
         </ol>
         <h4>Meteorological Statistical Model 3 (MTS3)</h4>
-        <p>The <a href="http://www.nrel.gov/docs/fy12osti/54824.pdf" target="_blank">National Solar Radiation Database User's Manual (1991–2010 Update)</a> describes the third version of the NSRDB. The manual provides guidance on using database products, acquaints the user with the many features of the database update, and provides information about how to use database products.</p>
+        <p class="long-p">The <a href="http://www.nrel.gov/docs/fy12osti/54824.pdf" target="_blank">National Solar Radiation Database User's Manual (1991–2010 Update)</a> describes the third version of the NSRDB. The manual provides guidance on using database products, acquaints the user with the many features of the database update, and provides information about how to use database products.</p>
         <h4>Meteorological Statistical Model 1 (MTS1)</h4>
-        <p>The <a href="http://rredc.nrel.gov/solar/pubs/NSRDB/cover.html" target="_blank">National Solar Radiation Database User's Manual (1961–1990)</a> describes the first version of the NSRDB. The manual provides guidance on using database products, acquaints the user with the many features of the database, and provides information about how to use database products.</p>
+        <p class="long-p">The <a href="http://rredc.nrel.gov/solar/pubs/NSRDB/cover.html" target="_blank">National Solar Radiation Database User's Manual (1961–1990)</a> describes the first version of the NSRDB. The manual provides guidance on using database products, acquaints the user with the many features of the database, and provides information about how to use database products.</p>
       </div>  
     </section>
     <section id="links">
