--- a/index/resources.html
+++ b/index/resources.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="nav">
-    <ul class="navigation">
+    <ul class="nav__headers">
       <li class="home-page">
         <a href="https://nsrdb.nrel.gov/">HOME</a>
       </li>
@@ -26,7 +26,17 @@
         <a href="https://nsrdb.nrel.gov/contact">CONTACT</a>
         </li>
     </ul>
-    <div class="search-contanier">
+    <div class="nav__drop-down">
+          <button class="nav__drop-down__button"></button>
+          <div class="nav__drop-down__content">
+            <a href="https://nsrdb.nrel.gov/">HOME</a>
+            <a href="https://nsrdb.nrel.gov/#access-data">ACCESS THE DATA</a>
+            <a href="https://nsrdb.nrel.gov/#whatis">ABOUT THE DATA</a>
+            <a href="https://nsrdb.nrel.gov/resources">RESOURCES</a>
+            <a href="https://nsrdb.nrel.gov/contact">CONTACT</a>
+          </div>
+    </div>      
+    <div class="search-container">
       <span class="search-icon-btn">
         <img  id="search__magnifying-img" src="../images/icons/magnifying-glass.svg" alt="magnifying glass image" />
       </span>
