Add code refactor and styles for globus links

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <main role="main">
       <section class="main__subtitle">
         <h3>ADVANCING THE SCIENCE OF SOLAR DATA</h3>
-        <ul>
-          <li><a class="main__subtitle__link" href="#whatis">What is the NSRDB?</a></li>
-          <li><a class="main__subtitle__link" href="#access-data">Accessing NSRDB Data</a></li>
-          <li><a class="main__subtitle__link" href="#contributors">Supporters and Contributors</a></li>
+        <ul class="main__links">
+          <li class="main-links__li"><a class="main__subtitle__link" href="#whatis">What is the NSRDB?</a></li>
+          <li class="main-links__li"><a class="main__subtitle__link" href="#access-data">Accessing NSRDB Data</a></li>
+          <li class="main-links__li"><a class="main__subtitle__link" href="#contributors">Supporters and Contributors</a></li>
         </ul>
       </section>
       <section class="main__collage">
