--- a/index/resources.html
+++ b/index/resources.html
@@ -55,14 +55,14 @@
       <p>The following resources provide additional information about the NSRDB.
       </p>
       <ul class="main__links">
-        <li>
-          <a class="main__links__sections" href="#user-manuals">USER MANUALS</a>
+        <li class="main-links__li">
+          <a class="main__links__a" href="#user-manuals">USER MANUALS</a>
         </li>
-        <li>
-          <a class="main__links__sections" href="#links">LINKS</a>
+        <li class="main-links__li">
+          <a class="main__links__a" href="#links">LINKS</a>
         </li>
-        <li>
-          <a class="main__links__sections" href="#publications">PUBLICATIONS</a>
+        <li class="main-links__li">
+          <a class="main__links__a" href="#publications">PUBLICATIONS</a>
         </li>
       </ul>
     </section>
